Added duckdb manager, arrow flight sql  server and a full distributed sql planner